--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Wgd
+title: wgd
 brief-intro: Developer
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jiephe.github.io/blog/" # the base hostname & protocol for your site
+url: "https://jiephe.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
